# JungleEngine

./: .gitignore  CMakeLists.txt
JungleEngineCore/: CMakeLists.txt
JungleEngineCore/include/: Camera.hpp  EngineCore.hpp  Shader.hpp
JungleEngineCore/src/: Camera.cpp  EngineCore.cpp  Shader.cpp
JungleEngineCore/src/shaders/: Default.frag  Default.vert  FragmentShader.frag  Lighting.frag  Lighting.vert  RT.frag  RT.vert
JungleEngineEditor/: CMakeLists.txt
JungleEngineEditor/src/: main.cpp
docs/: Doxyfile
docs/html/: __features_8hpp.html  __features_8hpp_source.html  __fixes_8hpp.html  __fixes_8hpp_source.html  __matrix__vectorize_8hpp.html  __matrix__vectorize_8hpp.js  __matrix__vectorize_8hpp_source.html  __mingw__dxhelper_8h.html  __mingw__dxhelper_8h_source.html  __noise_8hpp.html  __noise_8hpp_source.html  __swizzle_8hpp.html  __swizzle_8hpp_source.html  __swizzle__func_8hpp.html  __swizzle__func_8hpp_source.html  __vectorize_8hpp.html  __vectorize_8hpp_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _c_o_n_t_r_i_b_u_t_o_r_s_8md.html  _camera_8cpp.html  _camera_8cpp_source.html  _camera_8hpp.html  _camera_8hpp.js  _camera_8hpp_source.html  _engine_core_8cpp.html  _engine_core_8cpp.js  _engine_core_8cpp_source.html  _engine_core_8hpp.html  _engine_core_8hpp.js  _engine_core_8hpp_source.html  _l_i_c_e_n_s_e_8md.html  _s_u_p_p_o_r_t_8md.html  _shader_8cpp.html  _shader_8cpp_source.html  _shader_8hpp.html  _shader_8hpp.js  (+4402 more)
docs/html/search/: all_0.js  all_10.js  all_11.js  (+209 more)
